data/derived/comb/progs/unify/prog0965.ml.out
Characters 207-212:
  let args =  List.rev( (List.combine l1 l2) @ (0,0))in
                                               ^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type ('c * 'd) list
